--- a/src/app/features/modals/settings/export-modal/export-modal.component.html
+++ b/src/app/features/modals/settings/export-modal/export-modal.component.html
@@ -111,7 +111,6 @@
             [ngModel]="withPassword()"
             (ngModelChange)="onPasswordProtectionChange($event)"
             [disabled]="!sevenZipSupported() || isExporting()"
-            color="primary"
           >
             Encrypt Export
           </mat-slide-toggle>
@@ -154,7 +153,7 @@
       <button mat-button (click)="close()" [disabled]="isExporting()">Cancel</button>
       <button
         mat-flat-button
-        color="primary"
+        class="primary"
         (click)="onExport()"
         [disabled]="!canExport() || isExporting()"
       >
